yiltc-v0.2-backup/testsuite/negative/var_keyword.yilt
// Negative: `var` keyword does not exist in Yilt; use `let mut` instead.
fn main()
    var x = 42
    print(x)
